--- a/EmailCount/templates/EmailCount/addInSender.html
+++ b/EmailCount/templates/EmailCount/addInSender.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td>
                             <label for="check">
-                                <input type="checkbox" value="{{  i.inn_company  }}, {{ type_mailing }}">
+                                <input type="checkbox" value="{{  i.inn_company  }}, {{ type_mailing }}>
                                     <span></span>
                                 </label>
                             </td>
