--- a/dbServer/templates/sms/calls.html
+++ b/dbServer/templates/sms/calls.html
@@ -30,51 +30,51 @@
             </div>
             <div class="lists-table__col lists-table__col-name">
                 <div class="lists-table__box lists-table__box-name">
-                    <div class="filter-col">
-                        <ul class="filter-col__list">
-                            <li class="filter-col__li">
+                    <div class="toggle-col">
+                        <ul class="toggle-col__list">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" disabled checked>
                                     <span class="text">Наименование рассылки</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col2">
                                     <span class="text">Шаблон</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col3">
                                     <span class="text">Кол-во писем</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col4">
                                     <span class="text">Дата создания</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col5">
                                     <span class="text">Дата отправки</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col6">
                                     <span class="text">Ответственный</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col7">
                                     <span class="text">Статус</span>
                                 </label>
                             </li>
-                            <li class="filter-col__li">
+                            <li class="toggle-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col8">
                                     <span class="text">Привязанные контакты</span>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="lists-table__box">
                     <p class="text">
-                        <a href="callsto:zak.2@mosproektkompleks.ru">zak.2@mosproektkompleks.ru</a>, <br>
+                        <a href="mailto:zak.2@mosproektkompleks.ru">zak.2@mosproektkompleks.ru</a>, <br>
                         <a href="tel:84951500563">8(495)150-05-63</a>
                     </p>
                 </div>
