--- a/EmailCount/templates/EmailCount/mail.html
+++ b/EmailCount/templates/EmailCount/mail.html
@@ -1,82 +1,80 @@
 {% extends 'dbServer/pattern.html' %}
+{% block name %} {{ title }}{% endblock %}
 {% block body %}
-{% load static %}
+
 <div class="main-content content">
-    <div class="email lists">
-        <div class="mailers-btns__wrap">
+    <div class="mail lists">
+        <div class="mail-wrap">
             <div class="mailers-btns">
-                <button class="court-btn main-btn" id="letter">Создать письмо </button>
-                <button class="mailers-btn main-btn popup-btn" id="sendBX">+ Добавить в рассылку</button>
-                <button class="mailers-btn main-btn" id="sendMailing">Отправить рассылку</button>
+                <button class="court-btn main-btn popup-btn" id="addLetter"> + Добавить почтовую рассылку</button>
+                <button class="court-btn main-btn" id="removeLetter" onclick="removeLine()"> - Удалить почтовую рассылку</button>
+                <button class="court-btn main-btn" id="removeLetter" onclick=""> Отправить рассылку </button>
+                <button class="court-btn main-btn" id="removeLetter" onclick=""> Тестовая рассылка</button>
             </div>
-            <div class="mailers-btns__box">
-                <button class="mailers-btn main-btn" id="sendTestEmail">Отправить тестовое письмо</button>
-                <input class="mailers-input" type="text" placeholder="Введите email">
-            </div>
-        </div>
-        <div class="email-wrap">
-            <div class="email-table-main table" id="table">
+            <div class="mail-table-main table" id="table">
                 <div class="lists-table__col">
                     <div class="lists-table__box">
                         <label for="check">
-                            <input class="checkAllInput" id="checkAllMail" type="checkbox" id="checkAllAddSms">
+                            <input class="checkAllInput" id="checkAll" type="checkbox">
                             <span></span>
                         </label>
                     </div>
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <label for="check">
-                            <input type="checkbox" value="{{ i.id}},{{ i.template}},{{ i.contacts }}">
+                            <input type="checkbox" value="{{ i.id}}">
                             <span></span>
                         </label>
                     </div>
+                    {% endfor %}
                 </div>
                 <div class="lists-table__col lists-table__col-name">
                     <div class="lists-table__box lists-table__box-name">
-                        <div class="filter-col">
-                            <ul class="filter-col__list">
-                                <li class="filter-col__li">
+                        <div class="toggle-col">
+                            <ul class="toggle-col__list">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" disabled checked>
                                         <span class="text">Наименование рассылки</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col2">
                                         <span class="text">Шаблон</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col3">
                                         <span class="text">Кол-во писем</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col4">
                                         <span class="text">Дата создания</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col5">
                                         <span class="text">Дата отправки</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col6">
                                         <span class="text">Ответственный</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col7">
                                         <span class="text">Статус</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col8">
                                         <span class="text">Привязанные контакты</span>
@@ -86,18 +84,17 @@
                         </div>
                         <p class="text head-text">Наименование <br>рассылки</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
-                        <p class="text">{{ i.id}}</p>
+                        <p class="text"><a href="{{i.id}}">{{ i.mailing_list_name}}</a></p>
                     </div>
                     {% endfor %}
-<<<<<<< Updated upstream
                 </div>
                 <div class="lists-table__col" data-col="col2">
                     <div class="lists-table__box">
                         <p class="text head-text">Шаблон</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.template }}</p>
                     </div>
@@ -107,7 +104,7 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Кол-во писем</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.quantity }}</p>
                     </div>
@@ -117,7 +114,7 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Дата создания</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.date_creation }}</p>
                     </div>
@@ -127,7 +124,7 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Дата отправки</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.date_dispatch }}</p>
                     </div>
@@ -137,7 +134,7 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Ответственный</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.fio }}</p>
                     </div>
@@ -147,7 +144,7 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Статус</p>
                     </div>
-                    {% for i in Companies %}
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">{{ i.status}}</p>
                     </div>
@@ -157,43 +154,17 @@
                     <div class="lists-table__box">
                         <p class="text head-text">Привязанные контакты</p>
                     </div>
+                    {% for i in mail %}
                     <div class="lists-table__box">
                         <p class="text">
-                            {% for i in Companies %}
                             {% for j in i.contacts %}
-=======
-                    <th>email</th>
-                </tr>
-
-
-                {% for i in Companies %}
-                <tr>
-
-
-                <td>
-                    <label for="check">
-                        <input  type="checkbox" value="{{i.id}},{{ i.template}},{{ i.contacts }}">
-                        <span></span>
-                    </label>
-                </td>
-
-                   <td >{{ i.mailing_list_name}}</td>
-                    <td >{{ i.template }}</td>
-                    <td >{{ i.quantity }}</td>
-                    <td >{{ i.date_creation }}</td>
-                    <td >{{ i.date_dispatch }}</td>
-                    <td >{{ i.fio }}</td>
-                    <td >{{ i.status}}</td>
-                    {% for j in i.contacts %}
-                        <td >
->>>>>>> Stashed changes
-                            {% for f in j %}
-                            <a> {{ f }}</a>, <br>
-                            {% endfor %}
-                            {% endfor %}
+                                {% for f in j %}
+                                    <a> {{ f }}</a>,
+                                {% endfor %}
                             {% endfor %}
                         </p>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
