--- a/EmailPage/templates/EmailPage/post.html
+++ b/EmailPage/templates/EmailPage/post.html
@@ -1,12 +1,13 @@
 {% extends 'dbServer/pattern.html' %}
-{% block name %} {{ title }}{% endblock %}
+{% block name %}{{ title }}{% endblock %}
 {% block body %}
 <div class="main-content content">
     <div class="mail lists">
         <div class="mail-wrap">
             <div class="mailers-btns">
-                <button class="court-btn main-btn popup-btn" id="letter"> + Добавить почтовую рассылку</button>
-                <button class="court-btn main-btn" id="removeletter" onclick="removeLine()"> - Удалить почтовую рассылку</button>
+                <button class="court-btn main-btn popup-btn" id="addLetter"> + Добавить почтовую рассылку</button>
+                <button class="court-btn main-btn" id="removeLetter" onclick="removeLine()"> - Удалить почтовую
+                    рассылку</button>
                 <button class="court-btn main-btn" id="sendBXing" onclick="createLetters()">Создать письма</button>
                 <button class="court-btn main-btn" id="sendBX" onclick="createLabels()">Создать наклейки</button>
             </div>
@@ -17,12 +18,11 @@
                             <input class="checkAllInput" id="checkAll" type="checkbox">
                             <span></span>
                         </label>
-
                     </div>
                     {% for i in mail %}
                     <div class="lists-table__box">
                         <label for="check">
-                            <input type="checkbox" class="remove" value="{{ i.id }}">
+                            <input type="checkbox" value="{{ i.id }}, {{ i.template }}, {{ i.contacts }}">
                             <span></span>
                         </label>
                     </div>
@@ -30,73 +30,63 @@
                 </div>
                 <div class="lists-table__col lists-table__col-name">
                     <div class="lists-table__box lists-table__box-name">
-                        <div class="filter-col">
-                            <ul class="filter-col__list">
-                                <li class="filter-col__li">
+                        <div class="toggle-col">
+                            <ul class="toggle-col__list">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" disabled checked>
                                         <span class="text">Наименование рассылки</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col2">
                                         <span class="text">Шаблон</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col3">
                                         <span class="text">Кол-во писем</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col4">
                                         <span class="text">Дата создания</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col5">
                                         <span class="text">Дата отправки</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col6">
                                         <span class="text">Ответственный</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col7">
                                         <span class="text">Статус</span>
                                     </label>
                                 </li>
-                                <li class="filter-col__li">
+                                <li class="toggle-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col8">
                                         <span class="text">Привязанные контакты</span>
                                     </label>
                                 </li>
-                                 <li class="filter-col__li">
-                                    <label>
-                                        <input type="checkbox" checked id="col9">
-                                        <span class="text">Привязанные email</span>
-                                    </label>
-                                </li>
                             </ul>
                         </div>
-                        <p class="text head-text">Наименование<br>рассылки</p>
+                        <p class="text head-text">Наименование <br>рассылки</p>
                     </div>
                     {% for i in mail %}
                     <div class="lists-table__box">
-                        <p class="text">
-{#                            {% if i.status != 'Отправлено' %}#}
-                                <a href="{{i.id}}/">{{ i.mailing_list_name}}</a>
-{#                            {% else %}{{ i.mailing_list_name}}{% endif %}#}
-                        </p>
+                        <p class="text"><a href="{{i.id}}/">{{ i.mailing_list_name }}</a></p>
                     </div>
                     {% endfor %}
                 </div>
@@ -156,7 +146,7 @@
                     </div>
                     {% for i in mail %}
                     <div class="lists-table__box">
-                        <p class="text">{{ i.status}}</p>
+                        <p class="text">{{ i.status }}</p>
                     </div>
                     {% endfor %}
                 </div>
@@ -166,23 +156,11 @@
                     </div>
                     {% for i in mail %}
                     <div class="lists-table__box">
-                        <p class="text">
-                           {% for j in i.contacts.0 %}
-                               <a> {{ j }}</a>, <br>
-                           {% endfor %}
-                        </p>
-                    </div>
-                    {% endfor %}
-                </div>
-            <div class="lists-table__col" data-col="col9">
-                    <div class="lists-table__box">
-                        <p class="text head-text">Привязанные email</p>
-                    </div>
-                    {% for i in mail %}
-                    <div class="lists-table__box">
-                        <p class="text">
-                            {% for j in i.contacts.1 %}
-                                <a> {{ j }}</a>, <br>
+                        <p class="text text-flex">
+                            {% for j in i.contacts %}
+                            {% for f in j %}
+                            <a>{{ f }}</a>
+                            {% endfor %}
                             {% endfor %}
                         </p>
                     </div>
