--- a/dbServer/templates/dbServer/pattern.html
+++ b/dbServer/templates/dbServer/pattern.html
@@ -10,68 +10,201 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-
     <title>{% block name %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'dbServer/css/style.css' %}">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
-
+    <link rel="icon" href="{% static 'dbServer/images/favicon.ico'%}">
 </head>
 
 <body>
+    <div class="overlay"></div>
+    <img class="load-img" src="{% static 'dbServer/images/load.gif'%}" alt="">
+    <div class="update-company popup">
+        <span></span>
+        <form class="update-company__form" action="{% url 'addNewNewssender' %}" method="get">
+            <input type="hidden" name="idMailing" value="{{ types_mailing }}">
+            <input class="update-company__input mailers-input" type="text" name="name"
+                placeholder="Введите название рассылки">
+            <select name="id" class="update-company__item drop main-btn">
+                {% for j in templateForSend %}
+                <option value="{{ j.id }}">{{ j.template }}</option>
+                {% endfor %}
+            </select>
+            <!-- <input class="update-company__input mailers-input" type="text" name="phone" 
+                placeholder="Введите привязанные контакты">
+             <input class="update-company__input mailers-input" type="text" name="email" 
+                placeholder="Введите привязанные email"> -->
+            <button class="update-company__btn main-btn">Добавить</button>
+            </span>
+        </form>
+    </div>
     <header class="header">
         <div class="header-wrap">
             <a class="header-logo__link" href="/">
                 <img class="header-logo__icon" src="{% static 'dbServer/images/logo.png'%}" alt="logo">
             </a>
-            <form class="header-form form" action="" mediv class="lists-table__box" od="get">
+            <form class="header-form form" action="" class="lists-table__box">
+                {% csrf_token %}
                 <input class="header-input input" type="text" placeholder="Поиск и фильтр">
-                <button class="header-btn form-btn" type="submit"></button>
-
+                <button class="header-btn form-btn find" type="submit"></button>
+                <div class="filter-search__wrap">
+                    <div class="filter-search">
+                        <div class="filter-search__item-block">
+                            <div class="filter-search__item" id="revenue">
+                                <span class="filter-search__item-span">Выручка, &#8381;</span>
+                                <div class="filter-block">
+                                    <div class="filter-drop drop">
+                                        <span>Не выбрано</span>
+                                        <div class="drop__list">
+                                            <div class="drop__item">Не выбрано</div>
+                                            <div class="drop__item" data-drop="1">Больше</div>
+                                            <div class="drop__item" data-drop="-1">Меньше</div>
+                                            <div class="drop__item" data-drop="0">Равно</div>
+                                        </div>
+                                    </div>
+                                    <span class="filter-search__input">
+                                        <input type="number">
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="filter-search__item">
+                                <span class="filter-search__item-span">Источник данных</span>
+                                <div class="filter-block">
+                                    <div class="filter-drop drop source">
+                                        <span>Не выбрано</span>
+                                        <div class="drop__list">
+                                            <div class="drop__item">Не выбрано</div>
+                                            <div class="drop__item" data-drop="БЦ, ТЦ">БЦ, ТЦ</div>
+                                            <div class="drop__item" data-drop="Кадастровые компании">
+                                                Кадастровые&nbsp;компании</div>
+                                            <div class="drop__item" data-drop="СУД">СУД</div>
+                                            <div class="drop__item" data-drop="Битрикс24">Битрикс24</div>
+                                            <div class="drop__item" data-drop="Реестр самостроя">Реестр&nbsp;самостроя
+                                            </div>
+                                            <div class="drop__item" data-drop="Чеко">Чеко</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="filter-search__item-block">
+                            <div class="filter-search__item filter-search__item-empty">
+                                <p class="text">Исключить пустые значения</p>
+                                <ul class="filter-col__list">
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="legal_address">
+                                            <span class="text">Юр. адрес</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="position_head">
+                                            <span class="text">Должность руководителя</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="fio_head">
+                                            <span class="text">ФИО руководителя</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="telephone">
+                                            <span class="text">Телефоны</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="mail">
+                                            <span class="text">Почты</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="website">
+                                            <span class="text">Сайт</span>
+                                        </label>
+                                    </li>
+                                    <li class="toggle-col__li">
+                                        <label>
+                                            <input type="checkbox" id="type_activity">
+                                            <span class="text">ОКВЭД</span>
+                                        </label>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="filter-search__item filter-newsletter">
+                                <p class="text">Участие в рассылке</p>
+                                <ul class="filter-col__list">
+                                    <li class="toggle-col__li" id="email_newsletter">
+                                        <span class="text">E-mail</span>
+                                        <div class="filter-drop drop">
+                                            <span>Не выбрано</span>
+                                            <div class="drop__list">
+                                                <div class="drop__item">Не выбрано</div>
+                                                <div class="drop__item" data-drop="1">Участвовал</div>
+                                                <div class="drop__item" data-drop="0">Не участвовал</div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="toggle-col__li" id="mail_newsletter">
+                                        <span class="text">Почта</span>
+                                        <div class="filter-drop drop">
+                                            <span>Не выбрано</span>
+                                            <div class="drop__list">
+                                                <div class="drop__item">Не выбрано</div>
+                                                <div class="drop__item" data-drop="1">Участвовал</div>
+                                                <div class="drop__item" data-drop="0">Не участвовал</div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="toggle-col__li" id="sms_mailing">
+                                        <span class="text">SMS</span>
+                                        <div class="filter-drop drop">
+                                            <span>Не выбрано</span>
+                                            <div class="drop__list">
+                                                <div class="drop__item">Не выбрано</div>
+                                                <div class="drop__item" data-drop="1">Участвовал</div>
+                                                <div class="drop__item" data-drop="0">Не участвовал</div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="toggle-col__li" id="the_bell">
+                                        <span class="text">Звонки</span>
+                                        <div class="filter-drop drop">
+                                            <span>Не выбрано</span>
+                                            <div class="drop__list">
+                                                <div class="drop__item">Не выбрано</div>
+                                                <div class="drop__item" data-drop="1">Участвовал</div>
+                                                <div class="drop__item" data-drop="0">Не участвовал</div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filter-btns">
+                        <button class="filter-btn main-btn find" type="submit">Найти</button>
+                        <button class="filter-btn main-btn reset" type="submit">Сбросить</button>
+                    </div>
+                </div>
             </form>
             {% if request.user.is_authenticated %}
-            <a class="header-login" href="{% url 'logout' %}"><button>Выйти</button></a>
+            <a class="login" href="{% url 'logout' %}"><button class="login">Выйти</button></a>
             {% else %}
-            <form action="login/" method="POST">
+            <form class="form-login" action="login" method="POST">
                 {% csrf_token %}
-                <button type="submit">Войти</button>
+                <button class="login" type="submit">Войти</button>
             </form>
             {% endif %}
         </div>
     </header>
     {% if request.user.is_authenticated %}
-    <div class="overlay">
-        <div class="update-company popup">
-            <span></span>
-            <form class="update-company__form" action="" method="get">
-                <input class="update-company__input mailers-input" type="text" placeholder="Введите название рассылки">
-                <span class="update-company__item drop main-btn">
-                    <span>Название шаблона</span>
-                    <ul class="drop__list">
-                        <li>
-                            <label>
-                                <input class="drop__input" value="Легализация самостроя"
-                                    placeholder="Легализация самостроя">
-                            </label>
-                        </li>
-                        <li>
-                            <label>
-                                <input class="drop__input" value="Обследование зданий"
-                                    placeholder="Обследование зданий">
-                            </label>
-                        </li>
-                    </ul>
-                </span>
-                <input class="update-company__input mailers-input" type="text"
-                    placeholder="Введите привязанные контакты">
-                <button class="update-company__btn main-btn">Добавить</button>
-                </span>
-            </form>
-        </div>
-    </div>
     <main class="main">
-    {% load cache %}
-    {% cache 60 sidebar %}
         <div class="sidebar">
             <nav>
                 <ul class="sidebar-menu menu">
@@ -84,7 +217,7 @@
                             <img src="{% static 'dbServer/images/burger.png'%}" alt="">Списки</a>
                     </li>
                     <li class="menu-li" data-url="/objects">
-                        <a class="menu-link" href="../dbServer/objects.html">
+                        <a class="menu-link" href="{% url 'objects' %}">
                             <img src="{% static 'dbServer/images/object.png' %}" alt="">Объекты</a>
                     </li>
                     <li class="menu-li" data-url={% url 'mainCourt' %}>
@@ -103,7 +236,7 @@
                         <a class="menu-link" href={% url 'smsmainCourt' %}>
                             <img src="{% static 'dbServer/images/sms.png' %}" alt="">СМС</a>
                     </li>
-                    <li class="menu-li" data-url={% url 'Calsman' %}>
+                    <li class="menu-li">
                         <a class="menu-link" href={% url 'Calsman' %}>
                             <img src="{% static 'dbServer/images/phone.png' %}" alt="">Звонки</a>
                     </li>
@@ -122,18 +255,15 @@
                 </ul>
             </nav>
         </div>
-    {% endcache %}
         {% block body %}
         {% endblock %}
     </main>
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script defer src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-    <script src="{% static 'dbServer/js/main.js' %}"></script>
     <script src="{% static 'dbServer/js/col-resize.min.js' %}"></script>
+    <script src="{% static 'dbServer/js/main.js' %}"></script>
     {% endif %}
-
-
 </body>
 
 </html>
